--- a/backend/public/css/mypage.css
+++ b/backend/public/css/mypage.css
@@ -27,6 +27,18 @@
     color: #fff;
     background: #f56500;
 }
+
+.container{
+    margin-top: 2rem;
+}
+
+
+
+
+
+
+
+
 @media screen and (max-width: 768px) {
     .nav-brand img{
         width: 130px;
